SERVER-16184 repeated WriteBackListener error on out-of-order upgrade